--- a/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
@@ -344,7 +344,7 @@
                     $("#teamMembersData").val(JSON.stringify(selectedTeamMembers));
                     $("#NewSchedule_NumberOfAssetsToVerify").prop("disabled", false);
                     $("#frmCreateSchedule").submit();
-                    $("#btn-submit").addClass("btn-loading btn-icon disabled");
+                    //$("#btn-submit").addClass("btn-loading btn-icon disabled");
 
                 } else if (selectedTeamMembers.length === 0) {
                     notif({
