--- a/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
@@ -325,14 +325,12 @@
                 }
 
             });
-
             $('#storeDropdown').change(function () {
                 changestoreDropdown();
             });
             $('#verificationTypeDropdown').change(function () {
                 changeVerificationTypeDropdown();
             });
-
             $("#btn-submit").on("click", () => {
                 var blnCheck = true;
 
@@ -368,7 +366,6 @@
                     });
                 }
             });
-
             $("#btnDeleteSchedule").on("click", (e) => {
                 e.preventDefault();
                 const options = {
@@ -392,9 +389,9 @@
 
             // Handle verification type selection
             if (selectedValue === "Custom Verification") {
-                $("#NumberOfAssetsToVerify").prop("disabled", false); // Enable the textbox for custom verification
+                $("#NumberOfAssetsToVerify").prop("readonly", false); // Enable the textbox for custom verification
             } else {
-                $("#NumberOfAssetsToVerify").val(assetCount).prop("disabled", true); // Disable and set to asset count for full verification
+                $("#NumberOfAssetsToVerify").val(assetCount).prop("readonly", true); // Disable and set to asset count for full verification
             }
 
             // Revalidate the form after dynamically updating values
@@ -412,9 +409,9 @@
 
             // Handle verification type selection
             if (selectedValue === "Custom Verification") {
-                $("#NumberOfAssetsToVerify").prop("disabled", false);
+                $("#NumberOfAssetsToVerify").prop("readonly", false);
             } else {
-                $("#NumberOfAssetsToVerify").val(assetCount).prop("disabled", true);
+                $("#NumberOfAssetsToVerify").val(assetCount).prop("readonly", true);
             }
         }
         const loadExistingTeamMembers = () => {
