--- a/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
@@ -19,6 +19,17 @@
 </div>
 <!-- PAGE-HEADER END -->
 <!--ROW OPENED-->
+<style>
+    #profile-image {
+        height: 128px;
+        overflow: hidden;
+    }
+        #profile-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+</style>
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="card">
@@ -104,8 +115,8 @@
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="card-body d-flex justify-content-center align-items-center" style="height: 300px;">
-                            <div class="profile-img-main rounded-circle border border-secondary overflow-hidden" id="profile-image">
-                                <img src="@Model.Employee.ImageUrl" alt="" class="img-fluid rounded-circle" />
+                            <div id="profile-image" class="border border-secondary">
+                                <img src="@Model.Employee.ImageUrl" alt="Employee photo" class="img-fluid" />
                             </div>
                         </div>
                     </div>
