--- a/MODAMSWeb/Areas/Admin/Views/Settings/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Settings/Index.cshtml
@@ -218,7 +218,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+@* <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-body">
@@ -235,9 +235,8 @@
             </div>
         </div>
     </div>
-</div>
-</div>
-</div>
+</div> *@
+
 @section scripts {
     <script>
         $(document).ready(() => {
