--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -276,7 +276,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="btnNewUser" class="btn btn-primary">@Localizer["NewUser"]</button><button class="btn btn-light" data-bs-dismiss="modal">@Localizer["Close"]</button>
+                    <button id="btnNewUser" class="btn btn-primary">@Localizer["AssignUser"]</button><button class="btn btn-light" data-bs-dismiss="modal">@Localizer["Close"]</button>
                 </div>
             </div>
         </div>
