--- a/MODAMSWeb/Areas/Users/Views/Home/UnderConstruction.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/UnderConstruction.cshtml
@@ -3,9 +3,9 @@
 
 }
 
-<h2 class="text-white mb-2"><span class="fs-40">Under Construction</span></h2>
+<h2 class="text-white mb-2"><span class="fs-40">Module Unavailable</span></h2>
 <h5 class="error-details text-white">
-    Module under construction and will be available soon!
+    Module to be developed later!
 </h5>
 <div class="text-center">
     <a class="btn btn-primary mt-5 mb-5" asp-area="Users" asp-controller="Home" asp-action="Index"> <i class="fa fa-long-arrow-left"></i> Back to Home </a>
