--- a/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
@@ -230,7 +230,7 @@
                 </div>
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-info-gradient"> @Localizer["SaveAsset"]</button>
+                        <button id="btnSubmit" class="btn btn-info-gradient"><i class="fa fa-save"></i>&nbsp;@Localizer["SaveAsset"]</button>
                         <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
                     </div>
                 </div>
