--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-7">
                             <h6 class="text-bold text-info">@Localizer["Registered"]</h6>
-                            <span class="text-info text-bold">@Model.StoreCategoryAssets.Sum(m => m.TotalAssets)</span>
+                            <span class="text-info text-bold">@Model.RegisteredAssets</span>
                         </div>
                         <div class="col-5">
                             <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-info-gradient text-white ms-auto">
